# FunnelSwift

./: .dockerignore  .env.example  .gitignore  CODE_REVIEW.md  Cargo.toml  DEPLOYMENT.md  Dockerfile  GUARDRAILS.md  README.md  _headers  clean_funnelswift.py  create-profile-table.sql  deploy-from-vps.sh  fix_layer.py  fix_routes_py.py  middleware.ts  middleware.ts.bak  netlify.toml  next.config.js  package-lock.json  package.json  reload_nginx.sh  start.sh  test.sh  update_nginx.py
.github/workflows/: deploy.yml
app/: globals.css  layout.tsx  page.tsx
app/(app)/: layout.tsx
app/admin-login/: page.tsx
app/login/: page.tsx
components/: ChannelStatusBar.tsx  LiveFeed.tsx  OptimizedImage.tsx  affiliate-banner.tsx  affiliate-upgrade-cta.tsx  system-tag.tsx
components/layout/: ChannelStatusBar.tsx  LiveFeed.tsx  Sidebar.tsx  Topbar.tsx
deployment/: docker-compose.yml  nginx.conf  setup.sh
docs/: ADMIN_GUIDE.md  USER_GUIDE.md  admin-guide.md
hooks/: useIntegrationTriggers.ts  useLeads.ts  useRealtime.ts
lib/: env.ts  rate-limit.ts  redis.ts  scoring.ts  utils.ts
lib/api/: auth.ts  error-handling.ts  rate-limit.ts  webhook.ts
lib/integrations/: event-bus.ts  generic-integration.ts
lib/scoring/: lead-score.ts
lib/supabase/: server.ts
migrations/: 000001_initial.sql  000002_api_keys.sql  000005_portfolio_integrations.sql  000007_provider_keys.sql  000010_web_to_lead.sql  000011_web_to_lead_multi_tag.sql  000012_web_to_lead_public_key.sql  0012_kinetic_biolinks.sql  0012b_add_layout_blocks.sql  0013_tag_rules.sql  0014_sold_qualified_tags.sql  0015_kinetic_qr_codes.sql  0016_webhook_delivery_log.sql  009_create_linkedin_auths.sql  021_create_affiliate_tables.sql  022_create_missing_tables.sql  023_fix_schema_mismatches.sql  024_kinetic_enhancements.sql  026_affiliate_product_auto_sync.sql
pages/api/: health.js
public/: index.html
scripts/: create-super-admin.js  make-superadmin.js  optimize-images.js
src/: api_router.rs  auth_simple.rs  config.rs  db.rs  email.rs  error.rs  features.rs  main.rs  routes.rs  state.rs  tag_logic.rs  templates.rs
src/auth/: handlers.rs  middleware.rs  mod.rs  models.rs
src/handlers/: adaswift_provision.rs  admin_handler.rs  affiliate_handler.rs  affiliate_lead_handler.rs  affiliate_payout_handler.rs  affiliate_portal_handler.rs  affiliate_product_handler.rs  affiliate_tracking_handler.rs  api_key_handler.rs  lead_handler.rs  (+36 more)
stores/: leads.store.ts  ui.store.ts
templates/: admin_plans.html  micro_page.html  micro_page.html.bak
types/: index.ts
www/: guide.html  index.html  index.html.bak
(+127 files in other folders)
