[package]
name = "funnelswift"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip", "fs"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "migrate", "uuid", "chrono"] }

# Auth
jsonwebtoken = "9"
bcrypt = "0.15"
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Validation
validator = { version = "0.18", features = ["derive"] }

# Error handling
thiserror = "1"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Environment
dotenvy = "0.15"

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Password hashing
argon2 = "0.5"

# Random number generation
rand = "0.8"

# Base64 encoding/decoding
base64 = "0.21"

# Regex
regex-lite = "0.1"

# Async trait
async-trait = "0.1"

# Templating (Askama for SSR bio-link pages)
askama = "0.12"
qrcode = { version = "0.14", default-features = false, features = ["svg", "image"] }
image = "0.25"

[dev-dependencies]
tokio-test = "0.4"